# career-profile-evaluation

./: CLAUDE.md  docker-compose.yml  otel-collector-config.yml
backend/: Dockerfile  pyproject.toml
backend/src/api/: main.py
backend/src/config/: logging_config.py  mba_personas.json  otel_config.py  request_context.py  sentry_config.py  settings.py  telemetry.py  transformation_companies.json
backend/src/models/: mba_models.py  models.py
backend/src/repositories/: cache_repository.py
backend/src/services/: interview_readiness_logic.py  job_descriptions.py  langchain_llm_service.py  mba_ai_tools.py  mba_evaluator.py  mba_industry_data.py  mba_openai_service.py  mba_persona_matcher.py  mba_scoring_orchestrator.py  mba_skill_inference.py  mba_skill_scoring_maps.py  peer_comparison_logic.py  persona_matcher.py  profile_notes_logic.py  run_poc.py  scoring_logic.py  tools_logic.py
backend/src/utils/: label_mappings.py  validate_response.py
docs/superpowers/specs/: 2026-06-08-instructor-mentor-dashboard-buttons-design.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  setupProxy.js
frontend/src/api/: authService.js  endpoints.js  index.js  upcomingMasterclasses.js
frontend/src/components/: MBAResultsPage.js  NavigationBar.js  QuizPage.js  ResultsPage.js  temp.tsx  temp2.tsx
frontend/src/context/: AuthContext.jsx  MBAProfileContext.js
frontend/src/data/: ai_shift_content.js  alumni_stories.json  courses_by_role.js  online_pgp.js  sampleReportData.js  tenx_by_role.js  tools_curated.js  transformation_companies.json
frontend/src/hooks/: index.js  useSectionViewTracking.js
frontend/src/store/: upcomingMasterclasses.js
frontend/src/utils/: Turnstile.jsx  adminAuth.js  evaluationLogic.js  (+2 more)
(+40 files in other folders)
