[project]
name = "free-profile-evaluation-backend"
version = "2.0.0"
description = "Free Profile Evaluation API - Refactored with Clean Architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.5",
    "openai>=1.109.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.1",
    "sentry-sdk>=2.20.0",
    "psycopg2-binary>=2.9.9",
    "uvicorn[standard]>=0.32.0",
    "opentelemetry-api>=1.28.0,<2",
    "opentelemetry-sdk>=1.28.0,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-psycopg2>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]
